[package]
name = "rs_boostrap_testing"
version = "0.1.0"
authors = ["Jordan Mark Barbone <jmbarbone@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
# seq = "0.5.0"
# libc = "0.2.70"
random_choice = "0.3.2"
bench = "*"
